--- a/README
+++ b/README
@@ -10,8 +10,8 @@ If you are cloning this repo from git, use:
     git clone --recursive https://github.com/pitfail/earchive
 
 If it is already cloned normally, do this to initialize:
-    git submodule update --init
+    git submodule update --recursive --init
 
 To update this repo, do this:
     git pull --recurse-submodules
-    git submodule update --init
+    git submodule update --recursive --init
